# api/docs/swagger.json
@@ -7,6 +7,37 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/diagnostics/stats": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "api.v1",
+                    "diagnostics"
+                ],
+                "summary": "Docker stats",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/diagnostics.DockerStatsResult"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/project": {
             "get": {
                 "security": [
@@ -604,6 +635,48 @@
                 },
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "diagnostics.ContainerStats": {
+            "type": "object",
+            "properties": {
+                "cpuStats": {
+                    "$ref": "#/definitions/diagnostics.CpuStats"
+                },
+                "memoryStats": {
+                    "$ref": "#/definitions/diagnostics.MemoryStats"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "diagnostics.CpuStats": {
+            "type": "object",
+            "properties": {
+                "usagePercent": {
+                    "type": "number"
+                }
+            }
+        },
+        "diagnostics.DockerStatsResult": {
+            "type": "object",
+            "additionalProperties": {
+                "$ref": "#/definitions/diagnostics.ContainerStats"
+            }
+        },
+        "diagnostics.MemoryStats": {
+            "type": "object",
+            "properties": {
+                "limitMb": {
+                    "type": "number"
+                },
+                "usageMb": {
+                    "type": "number"
+                },
+                "usagePercent": {
+                    "type": "number"
                 }
             }
         },
